--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
@@ -3,21 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <VersionPrefix>0.1.0</VersionPrefix>
+    <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-    <!--
-    <PackageReference Include="Sylvan.Data" Version="0.1.0-b0024" />
-    <PackageReference Include="Sylvan.Data.Csv" Version="1.0.3" />
-    -->
-    <PackageReference Include="Sylvan.Data.Csv" Version="1.1.3" />
+    <PackageReference Include="Sylvan.Data.Csv" Version="1.1.9" />
+    <PackageReference Include="Sylvan.Data" Version="0.1.0" />
 
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Sylvan\source\Sylvan.Data\Sylvan.Data.csproj" />
-  </ItemGroup>
-
 </Project>
