--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <VersionPrefix>0.1.0</VersionPrefix>
-    <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<VersionPrefix>0.1.0</VersionPrefix>
+		<PackageTags>CSV;formatter</PackageTags>
+		<LangVersion>10.0</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-    <PackageReference Include="Sylvan.Data.Csv" Version="1.1.9" />
-    <PackageReference Include="Sylvan.Data" Version="0.1.0" />
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
+		<PackageReference Include="Sylvan.Data.Csv" Version="1.1.9" />
+		<PackageReference Include="Sylvan.Data" Version="0.1.0" />
 
-  </ItemGroup>
+	</ItemGroup>
 </Project>
