--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
@@ -3,15 +3,17 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<VersionPrefix>0.1.0</VersionPrefix>
-		<PackageTags>CSV;formatter</PackageTags>
+		<Description>ASP.NET formatter for text/csv content negotiation.</Description>
+		<PackageTags>CSV;formatter;aspnet</PackageTags>
 		<LangVersion>10.0</LangVersion>
 		<Nullable>enable</Nullable>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-		<PackageReference Include="Sylvan.Data.Csv" Version="1.1.9" />
+		<PackageReference Include="Sylvan.Data.Csv" Version="1.1.10" />
 		<PackageReference Include="Sylvan.Data" Version="0.1.0" />
 
 	</ItemGroup>
