--- a/source/TestApp/TestApp.csproj
+++ b/source/TestApp/TestApp.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Formatters.Csv\Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Formatters.Excel\Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj" />
+    <ProjectReference Include="..\Sylvan.AspNetCore.TagHelpers\Sylvan.AspNetCore.TagHelpers.csproj" />
   </ItemGroup>
 
 </Project>
