--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
@@ -1,18 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<VersionPrefix>0.1.0</VersionPrefix>
+		<VersionSuffix>b0002</VersionSuffix>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Sylvan.Data.Excel\source\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
-    <ProjectReference Include="..\..\..\Sylvan\source\Sylvan.Common\Sylvan.Common.csproj" />
-	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-	  <!--<PackageReference Include="Sylvan.Common" Version="0.3.0" />-->
-	  <PackageReference Include="Sylvan.Data" Version="0.2.5" />
-  </ItemGroup>
+	<ItemGroup>
+	  <Compile Include="..\Sylvan.AspNetCore.Mvc.Formatters.Csv\FormatterUtils.cs" Link="FormatterUtils.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
+		<PackageReference Include="Sylvan.Common" Version="0.3.0" />
+		<PackageReference Include="Sylvan.Data" Version="0.2.7" />
+		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.0-b0007" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Sylvan.Data.Excel\source\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
+	</ItemGroup>
+
 
 </Project>
