--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<VersionPrefix>0.2.0</VersionPrefix>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable><Description>ASP.NET formatter for text/csv content negotiation.</Description>
 		<Description>ASP.NET formatter for text/csv content negotiation.</Description>
 		<PackageTags>CSV;formatter;aspnet</PackageTags>
-		<LangVersion>10.0</LangVersion>
-		<Nullable>enable</Nullable>
+		<VersionPrefix>0.2.0</VersionPrefix>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
