--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Csv/Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj
@@ -13,8 +13,9 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-		<PackageReference Include="Sylvan.Data.Csv" Version="1.2.2" />
+		<PackageReference Include="Sylvan.Common" Version="0.3.0" />
 		<PackageReference Include="Sylvan.Data" Version="0.2.7" />
+		<PackageReference Include="Sylvan.Data.Csv" Version="1.2.2" />
 
 	</ItemGroup>
 </Project>
