--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
@@ -7,7 +7,7 @@
 		<Description>ASP.NET formatter for Excel content negotiation.</Description>
 		<PackageTags>Excel;formatter;aspnet</PackageTags>
 		<VersionPrefix>0.1.0</VersionPrefix>
-		<VersionSuffix>b0004</VersionSuffix>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -18,7 +18,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
 		<PackageReference Include="Sylvan.Common" Version="0.3.0" />
 		<PackageReference Include="Sylvan.Data" Version="0.2.7" />
-		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.0-b0008" />
+		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.0" />
 	</ItemGroup>
 	
 </Project>
