--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Description>ASP.NET formatter for Excel content negotiation.</Description>
@@ -16,9 +16,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
-		<PackageReference Include="Sylvan.Common" Version="0.3.0" />
-		<PackageReference Include="Sylvan.Data" Version="0.2.7" />
-		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.0" />
+		<PackageReference Include="Sylvan.Common" Version="0.4.1" />
+		<PackageReference Include="Sylvan.Data" Version="0.2.10" />
+		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.6" />
+
+
+		<!-- This took a while to figure out -->
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
-	
+
 </Project>
