--- a/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Formatters.Excel/Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
+		<!--<ImplicitUsings>enable</ImplicitUsings>-->
 		<Nullable>enable</Nullable>
 		<Description>ASP.NET formatter for Excel content negotiation.</Description>
 		<PackageTags>Excel;formatter;aspnet</PackageTags>
@@ -15,13 +15,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
-		<PackageReference Include="Sylvan.Common" Version="0.4.1" />
-		<PackageReference Include="Sylvan.Data" Version="0.2.10" />
-		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.6" />
+		
+		<PackageReference Include="Sylvan.Common" Version="0.4.2" />
+		
+		<PackageReference Include="Sylvan.Data" Version="0.2.12" />
+		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.11" />
 
-
-		<!-- This took a while to figure out -->
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
