--- a/source/TestApp/TestAppMvc.csproj
+++ b/source/TestApp/TestAppMvc.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sylvan.AspNetCore.Http.Csv\Sylvan.AspNetCore.Http.Csv.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Formatters.Csv\Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Formatters.Excel\Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.TagHelpers\Sylvan.AspNetCore.TagHelpers.csproj" />
