--- a/source/Sylvan.AspNetCore.Mvc.Excel/Sylvan.AspNetCore.Mvc.Excel.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Excel/Sylvan.AspNetCore.Mvc.Excel.csproj
@@ -8,15 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+		<Compile Include="..\Sylvan.AspNetCore.Http.Excel\ExcelConstants.cs" Link="ExcelConstants.cs" />
     <Compile Include="..\Sylvan.AspNetCore.Http.Excel\ExcelResult.cs" Link="ExcelResult.cs" />
-    <Compile Include="..\Sylvan.AspNetCore.Mvc.Formatters.Excel\ExcelConstants.cs" Link="ExcelConstants.cs" />
+    <Compile Include="..\Sylvan.AspNetCore.Mvc.Csv\FormatterUtils.cs" Link="FormatterUtils.cs" />
   </ItemGroup>
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Sylvan.Common" Version="0.4.2" />
 		<PackageReference Include="Sylvan.Data" Version="0.2.12" />		
-		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.12" />
+		<PackageReference Include="Sylvan.Data.Excel" Version="0.4.14" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="readme.md">
+	    <Pack>true</Pack>
+	  </None>
 	</ItemGroup>
 
 </Project>
