--- a/source/TestApp/TestAppMvc.csproj
+++ b/source/TestApp/TestAppMvc.csproj
@@ -7,16 +7,16 @@
 
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.117" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sylvan.AspNetCore.Http.Csv\Sylvan.AspNetCore.Http.Csv.csproj" />
-    <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Formatters.Csv\Sylvan.AspNetCore.Mvc.Formatters.Csv.csproj" />
-    <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Formatters.Excel\Sylvan.AspNetCore.Mvc.Formatters.Excel.csproj" />
+    <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Csv\Sylvan.AspNetCore.Mvc.Csv.csproj" />
+    <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Excel\Sylvan.AspNetCore.Mvc.Excel.csproj" />
+    <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.JsonData\Sylvan.AspNetCore.Mvc.JsonData.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.TagHelpers\Sylvan.AspNetCore.TagHelpers.csproj" />
   </ItemGroup>
 
