--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -15,8 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.1.1" PrivateAssets="All"/>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>  
+
+		<PackageReference Include="Microsoft.Build.Tasks.Git" Version="8.0.0" PrivateAssets="All" />
+		<PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />  
   </ItemGroup>
 
   <ItemGroup Condition="'$(IsTestProject)' == 'true'">
