--- a/source/MinimalAPITestApp/TestAppMinimal.csproj
+++ b/source/MinimalAPITestApp/TestAppMinimal.csproj
@@ -11,4 +11,12 @@
     <ProjectReference Include="..\Sylvan.AspNetCore.Http.Excel\Sylvan.AspNetCore.Http.Excel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.Build.Tasks.Git" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
