--- a/source/Sylvan.AspNetCore.TagHelpers/Sylvan.AspNetCore.TagHelpers.csproj
+++ b/source/Sylvan.AspNetCore.TagHelpers/Sylvan.AspNetCore.TagHelpers.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 	
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.2.0" />
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
