--- a/source/Sylvan.AspNetCore.Mvc.Csv/Sylvan.AspNetCore.Mvc.Csv.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.Csv/Sylvan.AspNetCore.Mvc.Csv.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 		<DefineConstants>MVC</DefineConstants>
+		<VersionPrefix>0.1.0</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,16 +16,9 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-		<PackageReference Include="Sylvan.Common" Version="0.4.2" />
-		<PackageReference Include="Sylvan.Data" Version="0.2.12" />
-		<PackageReference Include="Sylvan.Data.Csv" Version="1.3.3" />
+		<PackageReference Include="Sylvan.Common" Version="0.4.3" />
+		<PackageReference Include="Sylvan.Data" Version="0.2.16" />
+		<PackageReference Include="Sylvan.Data.Csv" Version="1.3.9" />
 	</ItemGroup>
 
-
-	<ItemGroup>
-	  <None Update="readme.md">
-	    <PackagePath></PackagePath>
-	    <Pack>true</Pack>
-	  </None>
-	</ItemGroup>
 </Project>
