--- a/source/Sylvan.AspNetCore.Mvc.JsonData/Sylvan.AspNetCore.Mvc.JsonData.csproj
+++ b/source/Sylvan.AspNetCore.Mvc.JsonData/Sylvan.AspNetCore.Mvc.JsonData.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -15,5 +15,5 @@
 	<ItemGroup>
 		<Compile Include="..\Sylvan.AspNetCore.Mvc.Csv\FormatterUtils.cs" Link="FormatterUtils.cs" />
 	</ItemGroup>
-	
+
 </Project>
