--- a/source/Sylvan.AspNetCore.Tests/Sylvan.AspNetCore.Tests.csproj
+++ b/source/Sylvan.AspNetCore.Tests/Sylvan.AspNetCore.Tests.csproj
@@ -1,19 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+
+    <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-    
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Sylvan.AspNetCore.Http.Csv\Sylvan.AspNetCore.Http.Csv.csproj" />
+    <ProjectReference Include="..\Sylvan.AspNetCore.Http.Excel\Sylvan.AspNetCore.Http.Excel.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Csv\Sylvan.AspNetCore.Mvc.Csv.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.Excel\Sylvan.AspNetCore.Mvc.Excel.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.Mvc.JsonData\Sylvan.AspNetCore.Mvc.JsonData.csproj" />
