Add minimal api content negotiation example.

--- a/source/MinimalAPITestApp/TestAppMinimal.csproj
+++ b/source/MinimalAPITestApp/TestAppMinimal.csproj
@@ -9,14 +9,14 @@
   <ItemGroup>
     <ProjectReference Include="..\Sylvan.AspNetCore.Http.Csv\Sylvan.AspNetCore.Http.Csv.csproj" />
     <ProjectReference Include="..\Sylvan.AspNetCore.Http.Excel\Sylvan.AspNetCore.Http.Excel.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Update="Microsoft.Build.Tasks.Git" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+    <PackageReference Include="Sylvan.BuildTools.Resources" Version="0.6.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+
+		<StaticResourceFolder Include="Content" />
   </ItemGroup>
 
 </Project>
